tree-sitter/grammar.js
    source_file: ($) => repeat($._statement),

    _statement: ($) =>
      choice(
        $.declaration_statement,
        $.if_statement,
        $.case_statement,
        $.while_statement,
        $.do_statement,
        $.loop_statement,
        $.at_statement,
        $.try_statement,
        $.class_forward_declaration,
        $.interface_forward_declaration,
        $.class_definition,
        $.class_implementation,
        $.interface_definition,
        $.method_signature,
        $.method_definition,
        $.form_definition,
        $.function_definition,
        $.module_definition,
        $.event_block,
        $.macro_definition,
        $.call_statement,
        $.describe_statement,
        $.delete_statement,
        $.update_statement,
        $.sort_statement,
        $.create_statement,
        $.add_statement,
        $.unpack_statement,
        $.sql_dml_statement,
        $.select_statement,
        $.submit_statement,
        $.set_pf_status_statement,
        $.set_titlebar_statement,
        $.exec_sql_statement,
        $.report_statement,
        $.include_statement,
        $.assign_statement,
        $.find_statement,
        $.assignment_statement,
        $.expression_statement,
        $.simple_statement,
        $.unknown_statement,
      ),

    identifier: (_) => token(/[A-Za-z_][A-Za-z0-9_]*/),
    field_symbol: (_) => token(/<[A-Za-z_][A-Za-z0-9_]*>/),
    field_path: (_) =>
      token(prec(1, /[A-Za-z_][A-Za-z0-9_]*(?:-[A-Za-z_][A-Za-z0-9_]*)+/)),
    _name: ($) =>
      choice(
        $.identifier,
        $.escaped_identifier,
        $.field_symbol,
        alias($._slash_identifier, $.identifier),
        $.cte_identifier,
      ),

    _argument_name: ($) =>
      choice(
        $._name,
        keywordIdentifierChoice($, COMPONENT_NAME_KEYWORDS),
      ),

    component_name: ($) =>
      prec(
        3,
        choice(
          $._name,
          keywordIdentifierChoice($, COMPONENT_NAME_KEYWORDS),
        ),
      ),

    routine_name: ($) => choice($.qualified_name, $.component_name),

    qualified_name: ($) =>
      prec.left(
        PREC.SELECTOR,
        seq(
          $._name,
          repeat(seq(choice("-", "->", "=>", "~"), $.component_name)),
        ),
      ),

    number: (_) => token(/\d+/),

    comment: ($) => choice($.line_comment, $.star_comment),

    line_comment: (_) => token(/"[^\r\n]*/),

    string: (_) =>
      choice(
        token(seq("'", repeat(choice(/[^'\r\n]/, "''")), "'")),
        token(seq("`", repeat(choice(/[^`\r\n]/, "``")), "`")),
      ),

    string_template: ($) =>
      seq(
        $.template_start,
        repeat(choice($.template_text, $.template_interpolation)),
        $.template_end,
      ),

    template_interpolation: ($) =>
      seq(
        $.template_interpolation_start,
        repeat($._template_token),
        $.template_interpolation_end,
      ),

    _template_token: ($) =>
      choice(
        $._expression,
        keywordChoice($, [
          "WIDTH",
          "ALIGN",
          "DECIMALS",
          "ALPHA",
          "DATE",
          "TIME",
          "TIMESTAMP",
          "CASE",
          "SIGN",
          "STYLE",
          "COUNTRY",
        ]),
        keywordChoice($, EXPRESSION_KEYWORDS),
        $.operator,
        $.template_punctuation,
      ),

    _literal: ($) => choice($.number, $.string, $.string_template),

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.selector_expression,
        $.interface_selector_expression,
        $.wildcard_selector_expression,
        $.call_expression,
        $.table_expression,
        $.substring_expression,
        $.constructor_expression,
        $.parenthesized_expression,
        $.host_expression,
        $.field_symbol_path,
        $.field_path,
        $.static_type_path,
        $.qualified_name,
        $._literal,
      ),

    host_expression: ($) => seq("@", field("value", $._expression)),

    parenthesized_expression: ($) =>
      seq("(", optional(seq($._expression, repeat(seq(",", $._expression)))), ")"),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq(field("left", $._expression), field("operator", keyword($, "OR")), field("right", $._expression))),
        prec.left(PREC.AND, seq(field("left", $._expression), field("operator", keyword($, "AND")), field("right", $._expression))),
        prec.left(PREC.COMPARE, seq(field("left", $._expression), field("operator", keyword($, "IS")), optional(field("negation", keyword($, "NOT"))), field("right", keywordChoice($, ["INITIAL", "BOUND", "ASSIGNED"])))),
        prec.left(PREC.COMPARE, seq(field("left", $._expression), field("operator", choice("=", "<>", "<", ">", "<=", ">=", keywordChoice($, ["EQ", "NE", "LT", "LE", "GT", "GE", "IS", "BETWEEN", "IN", "LIKE", "CO", "CN", "CA", "NA", "CS", "NS", "CP", "NP"]))), field("right", $._expression))),
        prec.left(PREC.CONCAT, seq(field("left", $._expression), field("operator", "&&"), field("right", $._expression))),
        prec.left(PREC.ADD, seq(field("left", $._expression), field("operator", choice("+", "-")), field("right", $._expression))),
        prec.left(PREC.MULTIPLY, seq(field("left", $._expression), field("operator", choice("*", "/", keyword($, "DIV"), keyword($, "MOD"))), field("right", $._expression))),
      ),

    selector_expression: ($) =>
      prec.left(
        PREC.SELECTOR,
        seq(
          field("object", $._expression),
          field("operator", choice("-", "->", "=>")),
          field("property", choice($.component_name, $.dynamic_component)),
        ),
      ),

    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(field("function", choice($._expression, keywordChoice($, CALLABLE_KEYWORDS))), field("arguments", $.argument_list)),
      ),

    argument_list: ($) =>
      seq(
        "(",
        repeat(choice($.for_groups_clause, $.constructor_row, $.named_argument, $._expression, $._argument_token)),
        ")",
      ),

    _argument_token: ($) =>
      choice(
        $.static_type_path,
        $.unary_expression,
        $.selector_expression,
        $.interface_selector_expression,
        $.wildcard_selector_expression,
        $.call_expression,
        $.table_expression,
        $.substring_expression,
        $.constructor_expression,
        $.parenthesized_expression,
        $.host_expression,
        $.field_symbol_path,
        $.field_path,
        $.positional_name,
        $._literal,
        keywordChoice($, CONSTRUCTOR_ARGUMENT_KEYWORDS),
        $.operator,
        $.punctuation,
      ),

    named_argument: ($) =>
      prec(PREC.COMPARE + 1, seq(field("name", $._argument_name), $.equals, field("value", $._expression))),

    equals: (_) => token(prec(3, "=")),

    constructor_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("constructor", keywordChoice($, ["VALUE", "NEW", "CONV", "COND", "SWITCH", "REDUCE", "FILTER", "CAST"])),
          choice(
            seq(field("type", choice("#", $.qualified_name, $.component_name)), field("arguments", $.argument_list)),
            field("arguments", $.argument_list),
          ),
        ),
      ),

    data_declaration: ($) => seq(keyword($, "DATA"), optional(":"), optional($._statement_tail), "."),
    types_declaration: ($) => seq(keyword($, "TYPES"), optional(":"), optional($._statement_tail), "."),
    field_symbols_declaration: ($) => seq(keyword($, "FIELD-SYMBOLS"), optional(":"), optional($._statement_tail), "."),
    parameters_declaration: ($) => seq(keywordChoice($, ["PARAMETERS", "PARAMETER"]), optional(":"), optional($._statement_tail), "."),
    select_options_declaration: ($) => seq(keyword($, "SELECT-OPTIONS"), optional(":"), optional($._statement_tail), "."),
    report_statement: ($) =>
      seq(keywordChoice($, ["REPORT", "PROGRAM"]), field("name", optional($._name)), optional($._statement_tail), "."),

    if_statement: ($) =>
      seq(
        keyword($, "IF"),
        field("condition", $._statement_tail),
        ".",
        field("body", repeat($._statement)),
        repeat($.elseif_clause),
        optional($.else_clause),
        keyword($, "ENDIF"),
        ".",
      ),

    elseif_clause: ($) =>
      seq(keyword($, "ELSEIF"), field("condition", $._statement_tail), ".", field("body", repeat($._statement))),

    else_clause: ($) => seq(keyword($, "ELSE"), ".", field("body", repeat($._statement))),

    class_definition: ($) =>
      seq(
        keyword($, "CLASS"),
        field("name", $._name),
        keyword($, "DEFINITION"),
        optional($._statement_tail),
        ".",
        field("body", repeat(choice($.visibility_section, $.method_signature, $.declaration_statement, $.simple_statement, $.unknown_statement))),
        keyword($, "ENDCLASS"),
        ".",
      ),

    class_implementation: ($) =>
      seq(
        keyword($, "CLASS"),
        field("name", $._name),
        keyword($, "IMPLEMENTATION"),
        optional($._statement_tail),
        ".",
        field("body", repeat($._statement)),
        keyword($, "ENDCLASS"),
        ".",
      ),

    visibility_section: ($) =>
      seq(keywordChoice($, ["PUBLIC", "PROTECTED", "PRIVATE"]), keyword($, "SECTION"), "."),

    method_signature: ($) =>
      prec(
        2,
        seq(
          keywordChoice($, ["METHODS", "CLASS-METHODS"]),
          optional(":"),
          optional($._method_signature_entries),
          ".",
        ),
      ),

    _method_signature_entries: ($) =>
      seq($._method_signature_entry, repeat(seq(",", $._method_signature_entry))),

    method_definition: ($) =>
      seq(keyword($, "METHOD"), field("name", $.routine_name), optional($._statement_tail), ".", field("body", repeat($._statement)), keyword($, "ENDMETHOD"), "."),

    form_definition: ($) =>
      seq(keyword($, "FORM"), field("name", $._name), optional($._statement_tail), ".", field("body", repeat($._statement)), keyword($, "ENDFORM"), "."),

    event_block: ($) =>
      seq(
        field("name", keywordChoice($, [
          "INITIALIZATION",
          "LOAD-OF-PROGRAM",
          "START-OF-SELECTION",
          "END-OF-SELECTION",
          "TOP-OF-PAGE",
          "END-OF-PAGE",
          "AT SELECTION-SCREEN",
        ])),
        optional($._statement_tail),
        ".",
      ),

    select_statement: ($) =>
      prec(
        1,
        seq(
          keywordChoice($, ["SELECT", "WITH"]),
          repeat1($._sql_tail_token),
          ".",
        ),
      ),

    _sql_tail_token: ($) =>
      choice(
        $.static_type_path,
        $.field_symbol_path,
        $.field_path,
        $.dynamic_name,
        $.substring_expression,
        $.sql_wildcard_selector,
        $.qualified_name,
        $._literal,
        keywordChoice($, EXPRESSION_KEYWORDS),
        keywordChoice($, STATEMENT_TAIL_KEYWORDS),
        $.operator,
        $.punctuation,
        $.tail_fragment,
      ),

    assignment_statement: ($) =>
      prec(
        2,
        seq(
          field("left", choice($.qualified_name, $.selector_expression, $.table_expression)),
          field("operator", choice("=", "?=")),
          field("right", optional(assignmentTail($))),
          ".",
        ),
      ),

    expression_statement: ($) =>
      prec(2, seq(field("expression", $.call_expression), optional($._statement_tail), ".")),

    simple_statement: ($) =>
      choice(
        prec(1, seq(field("keyword", keyword($, "MODIFY")), keyword($, "SCREEN"), optional($._statement_tail), ".")),
        prec(1, seq(field("keyword", keyword($, "MESSAGE")), optional(messageTail($)), ".")),
        prec(1, seq(field("keyword", keyword($, "EXPORT")), optional(memoryTransferTail($)), ".")),
        prec(1, seq(field("keyword", keyword($, "IMPORT")), optional(memoryTransferTail($)), ".")),
        seq(field("keyword", keywordChoice($, SIMPLE_STATEMENT_KEYWORDS)), optional($._statement_tail), "."),
      ),

    unknown_statement: ($) => prec.dynamic(-10, seq(repeat1($._raw_token), ".")),

    _statement_tail: ($) => repeat1($._tail_token),

    value_tail: ($) =>
      prec(
        PREC.COMPARE + 1,
        seq(
          keywordChoice($, ["VALUE", "DEFAULT"]),
          choice(
            $._expression,
            $._literal,
            $.qualified_name,
            $.selector_expression,
            $.component_name,
            keywordChoice($, COMPONENT_NAME_KEYWORDS),
          ),
        ),
      ),

    _raw_token: ($) =>
      choice(
        $.static_type_path,
        $.field_symbol_path,
        $.field_path,
        $._expression,
        keywordChoice($, EXPRESSION_KEYWORDS),
        $.operator,
        $.punctuation,
      ),

    operator: (_) =>
      token(choice("->*", "=>*", "->", "=>", "?=", "<=", ">=", "<>", "&&", "=", "+", "-", "*", "/", "<", ">", "~", "@", "#", "&")),

    punctuation: (_) => token(choice(",", ":", "(", ")", "[", "]")),
