tree-sitter/test/corpus/recovery.txt
==================
Unknown statements recover at periods
==================

REPORT zrecovery.
UNSUPPORTED-KEYWORD foo bar baz.
lo_obj->dynamic_call( EXPORTING iv_value = lv_value ).

---

(source_file
  (report_statement
    (keyword)
    (qualified_name
      (identifier)))
  (unknown_statement
    (field_path)
    (qualified_name
      (identifier))
    (qualified_name
      (identifier))
    (qualified_name
      (identifier)))
  (expression_statement
    (call_expression
      (selector_expression
        (qualified_name
          (identifier))
        (component_name
          (identifier)))
      (argument_list
        (keyword)
        (named_argument
          (identifier)
          (equals)
          (qualified_name
            (identifier)))))))
